Temperature Units Added

--- a/tests/UnitConverter.Tests/UnitConverter.Tests.csproj
+++ b/tests/UnitConverter.Tests/UnitConverter.Tests.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TemperatureUnitsTests.cs" />
     <Compile Include="UnitConverterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
