--- a/tests/UnitConverter.Tests/UnitConverter.Tests.csproj
+++ b/tests/UnitConverter.Tests/UnitConverter.Tests.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="ExtensionMethodsTests.cs" />
     <Compile Include="RepositoryTests.cs" />
+    <Compile Include="ServicesTests.cs" />
     <Compile Include="TemperatureUnitsTests.cs" />
     <Compile Include="UnitConverterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
