--- a/src/UnitConverter.ViewModel/UnitConverter.ViewModel.csproj
+++ b/src/UnitConverter.ViewModel/UnitConverter.ViewModel.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UnitConverter\UnitConverter.csproj" />
+  </ItemGroup>
+
 </Project>
