--- a/tests/UnitConverter.Tests/UnitConverter.Tests.csproj
+++ b/tests/UnitConverter.Tests/UnitConverter.Tests.csproj
@@ -76,17 +76,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExtensionMethodsTests.cs" />
-    <Compile Include="IntegrationTests.cs" />
-    <Compile Include="LoadQuantitiesServiceTests.cs" />
-    <Compile Include="LoadUnitsServiceTest.cs" />
-    <Compile Include="MainViewModelTests.cs" />
-    <Compile Include="RepositoryTests.cs" />
-    <Compile Include="TemperatureUnitsTests.cs" />
-    <Compile Include="UnitConverterServiceTests.cs" />
-    <Compile Include="UnitConverterTests.cs" />
+    <Compile Include="Extensions\ExtensionMethodsTests.cs" />
+    <Compile Include="Integration\IntegrationTests.cs" />
+    <Compile Include="Services\LoadQuantitiesServiceTests.cs" />
+    <Compile Include="Services\LoadUnitsServiceTest.cs" />
+    <Compile Include="MainViewModel\MainViewModelTests.cs" />
+    <Compile Include="Model\RepositoryTests.cs" />
+    <Compile Include="Model\TemperatureUnitsTests.cs" />
+    <Compile Include="Services\UnitConverterServiceTests.cs" />
+    <Compile Include="Model\UnitConverterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValueTests.cs" />
+    <Compile Include="Model\ValueTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -105,6 +105,7 @@
       <Name>UnitConverter</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
