--- a/src/UnitConverter.View.Wpf/UnitConverter.View.Wpf.csproj
+++ b/src/UnitConverter.View.Wpf/UnitConverter.View.Wpf.csproj
@@ -104,5 +104,8 @@
       <Name>UnitConverter</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="icon.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
