--- a/src/UnitConverter.View.Wpf/UnitConverter.View.Wpf.csproj
+++ b/src/UnitConverter.View.Wpf/UnitConverter.View.Wpf.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{581A713C-FCBB-41FD-9B5C-724CB1AE7263}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>UnitConverter.View.Wpf</RootNamespace>
-    <AssemblyName>UnitConverter.View.Wpf</AssemblyName>
+    <AssemblyName>UnitConverter.App</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
