--- a/src/UnitConverter.ViewModel/UnitConverter.ViewModel.csproj
+++ b/src/UnitConverter.ViewModel/UnitConverter.ViewModel.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\UnitConverter\UnitConverter.csproj" />
   </ItemGroup>
 
