--- a/src/UnitConverter/UnitConverter.csproj
+++ b/src/UnitConverter/UnitConverter.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Math">
       <HintPath>..\..\libs\Math.dll</HintPath>
     </Reference>
