--- a/tests/UnitConverter.Tests/packages.config
+++ b/tests/UnitConverter.Tests/packages.config
@@ -3,8 +3,11 @@
   <package id="Castle.Core" version="4.4.0" targetFramework="net472" />
   <package id="FluentAssertions" version="5.10.3" targetFramework="net472" />
   <package id="Moq" version="4.14.1" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="Xamarin.Essentials" version="1.5.3.1" targetFramework="net472" />
+  <package id="Xamarin.Forms" version="4.6.0.726" targetFramework="net472" />
   <package id="xunit" version="2.4.1" targetFramework="net472" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net472" />
   <package id="xunit.analyzers" version="0.10.0" targetFramework="net472" />
